# Get-Curve-Spot-Price

./: LICENSE  README.md  ape-config.yaml  pyproject.toml
.build/: ICurvePool.json  IDAI.json  IERC20.json  IMATIC.json  IUSDC.json  IWBTC.json  IWETH.json  __local__.json
.github/workflows/: python-app.yml
contracts/interfaces/: ICurvePool.sol  IDAI.sol  IERC20.sol  IMATIC.sol  IUSDC.sol  IWBTC.sol  IWETH.sol
scripts/: __init__.py  addresses.py  colours.py  constants.py  get_price.py  tokens.py  utils.py
tests/: conftest.py  test_get_price.py
